# wind-turbines

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: cd-pipeline.yml
src/wind_turbines/: anomaly_detection.py  cleaning.py  logger.py  main.py  spark_utils.py  storage_utils.py  summary_statistics.py
terraform/: env copy.tfvars.example  main.tf  tf_wind_turbine_data_objects.tf  tf_wind_turbine_job.tf  tf_wind_turbine_objects.tf  variables.tf
tests/: conftest.py  test_anomaly_detection.py  test_cleaning.py  test_main.py
tests/unit_tests/: test_anomaly_detection.py  test_cleaning.py  test_storage_utils.py  test_summary_statistics.py
