[project]
name = "wind-turbines"
version = "0.0.1"

dependencies = []

[project.optional-dependencies]
dev = [
    "pytest==8.3.3",
    "pytest-cov==3.0.0",
    "flake8==7.1.1",
    "Flake8-pyproject==1.2.3",
    "flake8-pytest-style==2.1.0",
    "black==24.10.0",
    "mypy==1.13.0",
    "pre-commit==4.0.1",
    "isort==5.13.2",
]

[project.scripts]

[tool.pytest.ini_options]
pythonpath = [
  "src/"
]

[tool.flake8]
max-line-length = 88

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
